tests/baselines/reference/stringLiteralTypesTypePredicates01.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesTypePredicates01.ts(4,10): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesTypePredicates01.ts(5,10): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesTypePredicates01.ts(10,5): error TS2322: Type 'string' is not assignable to type '"A" | "B"'.
  Type 'string' is not assignable to type '"B"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesTypePredicates01.ts (3 errors) ====
    
    type Kind = "A" | "B"
    
    function kindIs(kind: Kind, is: "A"): kind is "A";
             ~~~~~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    function kindIs(kind: Kind, is: "B"): kind is "B";
             ~~~~~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    function kindIs(kind: Kind, is: Kind): boolean {
        return kind === is;
    }
    
    var x: Kind = "A";
        ~
!!! error TS2322: Type 'string' is not assignable to type '"A" | "B"'.
!!! error TS2322:   Type 'string' is not assignable to type '"B"'.
    
    if (kindIs(x, "A")) {
        let a = x;
    }
    else {
        let b = x;
    }
    
    if (!kindIs(x, "B")) {
        let c = x;
    }
    else {
        let d = x;
    }